Reorganize project structure
- Created organized directory structure:
  * src/ for source code (models, training, inference, utils)
  * tests/ for test files
  * data/ for datasets (raw/processed)
  * configs/ for configuration files
  * checkpoints/ for saved models
  * logs/ for training logs
  * scripts/ for utility scripts
  * docs/ for documentation
  * examples/ for demos

- Added __init__.py files for proper Python packaging
- Updated imports in test_m_series.py to work with new structure
- Enhanced .gitignore for better directory management
- Added README files in key directories
- Verified functionality - all tests pass

Professional project layout ready for collaboration and deployment

--- a/.gitignore
+++ b/.gitignore
@@ -60,7 +60,10 @@ Thumbs.db
 *.pkl
 *.pickle
 mapillary-vistas-v2/
-data/
+data/raw/*
+data/processed/*
+!data/raw/.gitkeep
+!data/processed/.gitkeep
 datasets/
 
 # Model files
@@ -70,10 +73,15 @@ datasets/
 *.h5
 *.pb
 *.onnx
-models/
-checkpoints/
+*.engine
+*.trt
+checkpoints/*
+!checkpoints/README.md
 
 # Logs
 *.log
-logs/
+logs/*
+!logs/README.md
 wandb/
+runs/
+tensorboard/
