Add Claude AI integration for ML development assistance
Features:
- Training insights and optimization suggestions
- Dataset annotation helper with vision API
- Error analysis and debugging assistance
- Code review and documentation generation
- Research summarization

Components:
- src/utils/claude_assistant.py - Core Claude integration class
- examples/claude_training_monitor.py - Real-time training insights
- examples/claude_annotation_helper.py - Image annotation tool
- docs/CLAUDE_INTEGRATION.md - Complete usage guide

Benefits:
- AI-powered training optimization
- Faster dataset annotation workflow
- Intelligent error diagnosis
- Automated documentation generation
- Research assistance

Note: Claude integration is optional - requires API key
Project works perfectly without it - Claude just adds dev assistance

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,9 @@ onnx>=1.12.0,<1.15.0
 onnxruntime>=1.12.0,<1.15.0  # CPU version for macOS
 thop>=0.1.1
 
+# Claude AI integration (optional)
+anthropic>=0.18.0
+
 # Optional for visualization
 # tensorboard>=2.11.0
 # wandb>=0.13.0
